fix: Safari SVG Blurring 버그 수정

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,10 @@ button {
   border: none;
   background-color: transparent;
 }
+
+svg {
+  /* Safari SVG blurring */
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
